@@ -56,9 +56,9 @@ the current point (when pointing down).
   and dragging with the second mouse button.
 <LI>The <B>lasso</B> button turns the lasso contour on or off.  The lasso can
   be used to select multiple contours, to mask the volume displayed by the
-<A href="modvIsosurface.html">Isosurface</A> dialog, and to select an area
+<A href="modvIsosurface.html#TOP">Isosurface</A> dialog, and to select an area
 within which to delete contours with values below a threshold in
-the <A href="beadfix.html">Bead Fixer</A>.  When it is turned on, you can then
+the <A href="beadfix.html#TOP">Bead Fixer</A>.  When it is turned on, you can then
 draw the lasso contour by pressing the first or second mouse button, and
 holding it down while drawing the contour from one end to the other.  Once it
 is drawn, it can be moved by placing the mouse within 10 pixels of the
@@ -71,7 +71,12 @@ contour shifting is turned on with the <B>P</B> hot key (see below).
   desired position for the tail of the arrow, press the first mouse button,
   and hold it down while positioning the head of the arrow.  The arrow
   endpoints stay at the same X/Y positions in the image if the image is panned or
-  zoomed or stepped to a different Z.  Turn off the button to remove the arrow.
+  zoomed or stepped to a different Z.  Turn off the button to remove the
+  arrow.  You can change the color of the arrow in the Appearance/Limits tab
+  of the 3dmod Options dialog by selecting "Arrow" in the combo box and
+  pressing <B>Set Color For</B>.  To draw multiple arrows, you can set up an
+  object instead, as described in the "Symbols" section of
+  the <A href="objectEdit.html#TOP">Object Edit</A> dialog.
 <LI>The <B>Z slider</B> allows one to riffle through images or select a 
 particular section to display.
 <LI>The <B>section</B> edit box shows the current section and allows one 
